style: fix dark mode colors

--- a/src/widgets/ProblemSpaceInfo/components/Status/Status.module.css
+++ b/src/widgets/ProblemSpaceInfo/components/Status/Status.module.css
@@ -11,7 +11,8 @@
 
   border-radius: 10px;
 
-  background-color: var(--color-white-grey);
+  background-color: #f4f5f6d3;
+  color: #363645;
 }
 
 .problemStatusFailed {
